# colliseum

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  atletas_bulk.json  colliseum.before-brackets-delete.20260508-125934.db  colliseum.before-fight-cleanup.20260508-114107.db  colliseum.before-operational-cleanup.20260508-131154.db  colliseum.db  gerar_atletas.py  iniciar_sistema.bat  pyproject.toml
alembic/: env.py
alembic/versions/: 20260502_0835_initial_schema.py  20260507_1200_add_competition_mat_count.py  20260507_2100_add_ranking_entries.py  20260508_0900_expand_belt_enum.py  20260508_1100_add_competition_checkins.py  20260508_1200_add_checkin_status.py  20260508_1300_add_match_results.py  20260509_0900_add_competition_type_and_days.py  20260509_0930_add_competition_day_dates.py  20260509_1000_add_competition_start_time.py  20260509_1100_add_competition_schedule.py  20260509_1200_add_match_finished_at.py  20260530_0100_relax_team_and_athlete_team.py  20260601_0900_allow_multiple_brackets_per_category.py
app/: main.py
app/core/: config.py  dates.py  validators.py
app/database/: prepare.py  session.py
app/models/: __init__.py  athlete.py  bracket.py  category.py  common.py  ranking.py  team.py
app/routers/: athletes.py  categories.py  competitions.py  deps.py  health.py  ranking.py  teams.py
app/schemas/: athlete.py  bracket.py  category.py  ranking.py  team.py
app/static/: app.js  (+14 more)
seed/: categories_ibjjf_gi_2026.json  top_10_ibjjf_teams_2026.json
tests/: test_athletes_api.py  test_brackets_api.py  test_ranking_api.py  test_teams_api.py
(+10 files in other folders)
